fix(stepper): fixes indicator-sizing in forced-color/high-contrast mode

--- a/packages/web-styles/src/components/stepper.scss
+++ b/packages/web-styles/src/components/stepper.scss
@@ -186,7 +186,7 @@
           content: '';
           position: absolute;
           inset: 0;
-          outline-offset: spacing.$size-micro * 2;
+          outline-offset: spacing.$size-line * 2;
           outline: spacing.$size-line solid Highlight;
           border-radius: inherit;
         }
@@ -195,9 +195,13 @@
   }
 
   .step-indicator {
+    margin: spacing.$size-line;
+    width: calc(stepper.$step-indicator-size - (spacing.$size-line * 2));
+    height: calc(stepper.$step-indicator-size - (spacing.$size-line * 2));
     background-color: ButtonFace;
+    border-width: spacing.$size-line;
     border-color: ButtonBorder;
-    outline: spacing.$size-line solid ButtonFace;
+    outline: spacing.$size-micro solid ButtonFace;
     color: ButtonText;
 
     .step.passed & {
